k8s/tukano2-blobs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tukano-blobs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tukano-blobs
  template:
    metadata:
      labels:
        app: tukano-blobs
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
        - name: tukano-blobs
          image: jbrilha/scc2425-tukano2-blobs:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: blob-storage
              mountPath: /app/blobs/
      volumes:
        - name: blob-storage
          persistentVolumeClaim:
            claimName: blob-storage-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: tukano-blobs-service
spec:
  type: NodePort
  selector:
    app: tukano-blobs
  ports:
    - port: 8080
      targetPort: 8080
