k8s/tukano2-webapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tukano-webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tukano-webapp
  template:
    metadata:
      labels:
        app: tukano-webapp
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
        - name: tukano-webapp
          image: eduardoervideira/scc2425-tukano2:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: tukano-webapp-service
spec:
  type: NodePort
  selector:
    app: tukano-webapp
  ports:
    - port: 8080
      targetPort: 8080
