k8s/webapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tukano-webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tukano-webapp
  template:
    metadata:
      labels:
        app: tukano-webapp
    spec:
      containers:
        - name: tukano-webapp
          image: tukano-webapp:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: blob-storage
              mountPath: /app/blobs/
      volumes:
        - name: blob-storage
          persistentVolumeClaim:
            claimName: blob-storage-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: tukano-webapp-service
spec:
  type: NodePort
  selector:
    app: tukano-webapp
  ports:
    - port: 8080
      targetPort: 8080
