k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tukano-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /blob-service-2/rest/blobs$1
spec:
  rules:
  - host:
    http:
      paths:
      - path: /tukano/rest/blobs(/?.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: tukano-blobs-service
            port:
              number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tukano-ingress-webapp
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /webapp-2/rest/$1
spec:
  rules:
  - host:
    http:
      paths:
      - path: /tukano/rest/(?!blobs)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: tukano-webapp-service
            port:
              number: 8080
